[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/map_selector.gd" type="Script" id=1]
[ext_resource path="res://textures/desert_map_bg.png" type="Texture" id=2]

[node name="map_selector" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texture_rect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="h_box_container" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 304.344
margin_top = 42.7149
margin_right = -394.656
margin_bottom = 89.7149
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button" type="Button" parent="h_box_container"]
margin_right = 55.0
margin_bottom = 47.0
text = "Desert"

[node name="button_2" type="Button" parent="h_box_container"]
margin_left = 59.0
margin_right = 104.0
margin_bottom = 47.0
text = "Snow"

[node name="button_3" type="Button" parent="h_box_container"]
margin_left = 108.0
margin_right = 153.0
margin_bottom = 47.0
text = "Track"

[connection signal="pressed" from="h_box_container/button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="h_box_container/button_2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="h_box_container/button_3" to="." method="_on_button_3_pressed"]
